<resources>
    <string name="app_name">TERMINATOR</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Panier de meth</string>
    <string name="title_notifications">Caca</string>
    <string name="Chercherarticle">Chercher un article</string>
    <string name="title" />
    <string name="price" />
    <string name="description" />
    <string name="category" />
    <string name="image" />
    <string name="rating" />
    <string name="add_product_panier">Acheter</string>
    <string name="add_client_message_add">Produit ajouté au panier</string>
    <string name="viderpanier">Vider le panier</string>
    <string name="sup_client_message_add">Produit supprimé du panier</string>
    <string name="supprimer">Supprimer</string>
</resources>